# Coastal_Fishing_Forecast

./: .gitignore  AGENTS.md  README.md  pyproject.toml
coastal_fishing_forecast/: __init__.py  __main__.py  api.py  api_cli.py  cache.py  cli.py  conditions.py  feedback.py  feedback_analysis.py  feedback_cli.py  forecast.py  forecast_cli.py  github_models.py  place_cli.py  places.py  planner.py  preview.py  regions.py  regression_replay.py  regression_replay_cli.py  score_factors_llm.py  search_forecast.py  search_forecast_cli.py  social_pulse.py  structures.py  tides.py  tidesatlas.py  verify.py
data/: feedback.jsonl
docs/: australia_official_fishing_guide_list_2026-05-22.md  australia_official_fishing_spot_source_list_2026-05-22.md  australia_public_fishing_sources_2026-05-21.md  current_engine_ai_reference_2026-05-01.md  current_engine_algorithm_full_2026-05-07.md  development_guide_2026-05-20.md  engine_contract_preview_2026-04-23.md  engine_example_payloads_2026-04-23.md  engine_handoff_next_session_2026-04-23.md  engine_regression_samples_2026-04-23.md  engine_sample_provenance_2026-04-24.md  engine_todo_checklist_2026-04-23.md  engine_verification_path_2026-04-27.md  external_keys_setup_2026-04-28.md  feedback_schema_v1_2026-05-07.md  fish_index_algorithm_literature_review_2026-05-20.md  fish_index_api_input_audit_2026-05-20.md  frontend_alignment_backlog.md  frontend_api_contract_2026-04-27.md  frontend_mvp_progress_2026-04-28.md  frontend_product_plan_2026-04-28.md  frontend_reference_tides4fishing_2026-04-28.md  frontend_reference_windy_app_2026-04-28.md  (+10 more)
(+174 files in other folders)
